--- a/clicky_game/public/index.html
+++ b/clicky_game/public/index.html
@@ -47,7 +47,11 @@
      <!--Import jQuery before materialize.js-->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
+    <script>
+       $(document).ready(function(){
+    $('.slider').slider();
+  });
+    </script>
   </body>
 
 </html>
