Added background song component. Revised Click events to array.map vs for loop. added separate correct guess vs incorrect guess handlers

--- a/clicky_game/public/index.html
+++ b/clicky_game/public/index.html
@@ -33,6 +33,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <span id="audio"></span>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -50,6 +51,7 @@
     <script>
        $(document).ready(function(){
     $('.slider').slider();
+    $('#audio').html('<audio autoplay><source src="./Song.mp3"></audio>');
   });
     </script>
   </body>
